--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+     "start": "next start",
+     "lint": "next lint",
+    "export": "next export",
+    "postexport": "npx @cloudflare/next-on-pages",
+    "deploy": "npm run build && npm run export"
   },
   "dependencies": {
+    "@cloudflare/next-on-pages": "^1.12.0",
     "@next/font": "^14.2.3",
     "date-fns": "^3.6.0",
     "disqus-react": "^1.1.5",
