--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,12 @@
-name = "my-worker"
-main = "src/index.js"
-compatibility_date = "2022-07-12"
+name = "your-project-name"
+type = "javascript"
+account_id = "your-cloudflare-account-id"
+compatibility_date = "2024-07-02"
+
+
+pages_build_output_dir = "out" # or ".next"
+
+[build]
+command = "npm run build"
+cwd = "."
+upload_format = "directory"
