--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,12 +1,6 @@
 name = "your-project-name"
-type = "javascript"
-account_id = "your-cloudflare-account-id"
 compatibility_date = "2024-07-02"
+pages_build_output_dir = ".next"
 
 
-pages_build_output_dir = "out" # or ".next"
 
-[build]
-command = "npm run build"
-cwd = "."
-upload_format = "directory"
