--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "your-project-name"
-compatibility_date = "2024-07-02"
-pages_build_output_dir = ".next"
-
-
-
+name = "vinland-saga"
+route = {
+  "*": {
+    src = "pages"  # Point to your Next.js pages directory
+  }
+}
