--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^34.2.8",
+    "wrangler": "^3.62.0"
   },
   "devDependencies": {
     "postcss": "^8",
